refact:make modules

--- a/ExportGlb.csproj
+++ b/ExportGlb.csproj
@@ -19,5 +19,9 @@
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
   
 </Project>
